--- a/mingw-w64-crt/lib-common/api-ms-win-crt-runtime-l1-1-0.def.in
+++ b/mingw-w64-crt/lib-common/api-ms-win-crt-runtime-l1-1-0.def.in
@@ -44,7 +44,7 @@ _errno
 _execute_onexit_table
 _exit
 _fpieee_flt
-_fpreset F_LD80(DATA)
+_fpreset F_LD80(DATA) ; DATA added manually
 _get_doserrno
 _get_errno
 _get_initial_narrow_environment
@@ -108,7 +108,6 @@ fesetenv DATA
 fesetexceptflag DATA
 fesetround DATA
 fetestexcept DATA
-F_LD64(fpreset == _fpreset)
 perror
 quick_exit
 raise
