crt: Fix condition for fabsf in api-ms-win-crt-math
This was changed erroneously in
95ad23696f57b0f966525b574096bd53d48c773a; fabsf is only available
on arm/aarch64 - it doesn't have anything to do with whether
we are compatible with UCRT regarding long doubles.

Also fix _o_fabsf in ucrtbase-common.def.in which also was changed
erroneously in the same way.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/api-ms-win-crt-math-l1-1-0.def.in
+++ b/mingw-w64-crt/lib-common/api-ms-win-crt-math-l1-1-0.def.in
@@ -266,7 +266,7 @@ expm1
 expm1f
 F_LD64(expm1l) ; Can't use long double functions from the CRT on x86
 fabs
-F_LD64(fabsf)
+F_ARM_ANY(fabsf)
 fdim
 fdimf
 F_LD64(fdiml) ; Can't use long double functions from the CRT on x86
