crt: Provide _aligned_* functions
Functions _aligned_free(), _aligned_malloc(), _aligned_offset_malloc(),
_aligned_offset_realloc() and _aligned_realloc() are available since
msvcr70.dll. For older CRT import libraries provide emulation via
mingw functions __mingw_aligned_free(), __mingw_aligned_malloc(),
__mingw_aligned_offset_malloc(), __mingw_aligned_offset_realloc() and
__mingw_aligned_realloc(). msvcrt.dll will use system implementation if
available, otherwise transparently fallback to mingw version.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -1202,11 +1202,11 @@ __crtLCMapStringW
 F_NON_I386(__iob_func) ; i386 __iob_func replaced by alias
 F_NON_I386(__pctype_func) ; i386 __pctype_func replaced by emu
 __wcserror
-_aligned_free
-_aligned_malloc
-_aligned_offset_malloc
-_aligned_offset_realloc
-_aligned_realloc
+F_NON_I386(_aligned_free) ; i386 _aligned_free replaced by emu
+F_NON_I386(_aligned_malloc) ; i386 _aligned_malloc replaced by emu
+F_NON_I386(_aligned_offset_malloc) ; i386 _aligned_offset_malloc replaced by emu
+F_NON_I386(_aligned_offset_realloc) ; i386 _aligned_offset_realloc replaced by emu
+F_NON_I386(_aligned_realloc) ; i386 _aligned_realloc replaced by emu
 _cgetws
 _cputws
 _cwprintf
