crt: Provide _aligned_msize function for all CRT import libraries
Function _aligned_msize() is available only in msvcr80+ and UCRT. It is not
available in msvcrt.dll system os library.

Now when the mingw-w64 aligned functions use same alignment and gap
calculation we can use mingw-w64 __mingw_aligned_msize() function as
implementation for CRT's _aligned_msize() function.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -323,6 +323,7 @@ src_msvcrt=\
   misc/__iswcsymf.c \
   misc/__sys_errlist.c \
   misc/__sys_nerr.c \
+  misc/_aligned_msize.c \
   misc/_configthreadlocale.c \
   misc/_set_purecall_handler.c \
   misc/imaxdiv.c \
@@ -811,6 +812,7 @@ src_pre_msvcr80=\
   misc/__iswcsymf.c \
   misc/__sys_errlist.c \
   misc/__sys_nerr.c \
+  misc/_aligned_msize.c \
   misc/_configthreadlocale.c \
   misc/_get_errno.c \
   misc/_initterm_e.c \
