crt: Provide *_recalloc functions
They are natively available since msvcr80.dll, they are not available in
msvcrt.dll. Provide compatibility emulation into all import libraries where
they are not available.

Compatibility emulation needs to use _msize() or _aligned_msize() functions
to figure out the previous size and properly clear the expanded memory as
*calloc functions require.

Memory allocated by these mingw-w64 emulation functions can be normally
released by the appropriate CRT free() or _aligned_free() function.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -324,7 +324,10 @@ src_msvcrt=\
   misc/__sys_errlist.c \
   misc/__sys_nerr.c \
   misc/_aligned_msize.c \
+  misc/_aligned_offset_recalloc.c \
+  misc/_aligned_recalloc.c \
   misc/_configthreadlocale.c \
+  misc/_recalloc.c \
   misc/_set_purecall_handler.c \
   misc/imaxdiv.c \
   misc/invalid_parameter_handler.c \
@@ -813,9 +816,12 @@ src_pre_msvcr80=\
   misc/__sys_errlist.c \
   misc/__sys_nerr.c \
   misc/_aligned_msize.c \
+  misc/_aligned_offset_recalloc.c \
+  misc/_aligned_recalloc.c \
   misc/_configthreadlocale.c \
   misc/_get_errno.c \
   misc/_initterm_e.c \
+  misc/_recalloc.c \
   misc/_set_errno.c \
   misc/btowc.c \
   misc/imaxabs.c \
