crt: Move __guard_dispatch_icall_dummy to separated file
In preparation for building as x86_64 on ARM64EC.

Signed-off-by: Jacek Caban <jacek@codeweavers.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -1086,7 +1086,8 @@ src_libmingwex_x86=\
 
 
 src_libmingwex32=$(src_libmingwex_x86)
-src_libmingwex64=$(src_libmingwex_x86)
+src_libmingwex64=$(src_libmingwex_x86) \
+  cfguard/guard_dispatch.S
 
 # these only go into the ARM32 version:
 src_libmingwexarm32=\
