crt: Provide emulation of _fstat64, _stat64 and _wstat64 functions
These functions are available since msvcr70.dll. For older msvcrt versions
provide emulation via _fstat32(), _stat32() and _wstat32() functions. These
functions in all pre-msvcr100 CRT libraries provides only truncated 32-bit
file size and invalid value -1 as timestamp.

The real 64-bit non-truncated file size and valid timestamp information is
retrieved via the WinAPI calls.

For _stat64() and _wstat64() use WinAPI FindFirstFile() call. And for
_fstat64() use WinAPI GetFileInformationByHandle() call. Same thing is
doing msvcrt DLL library for other stat functions. Note that both WinAPI
functions are available in all Windows version (since the Windows NT 3.1
and the Windows 95).

Functions _fstat64() and _stat64() are already used by mingw-w64 crt, so
ensure that they are present in every CRT import library.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -549,11 +549,14 @@ src_msvcrt32=\
   misc/wcstoumax.c \
   misc/wctob.c \
   stdio/_fseeki64.c \
+  stdio/_fstat64.c \
   stdio/_fstat64i32.c \
   stdio/_scprintf.c \
   stdio/_scwprintf.c \
+  stdio/_stat64.c \
   stdio/_vscprintf.c \
   stdio/_vscwprintf.c \
+  stdio/_wstat64.c \
   string/wcstok.c
 
 # Files included in libmsvcrt-os.a (for msvcrt.dll) on x86_64
@@ -815,10 +818,13 @@ src_pre_msvcr70=\
   misc/strtoumax.c \
   misc/wcstoimax.c \
   misc/wcstoumax.c \
+  stdio/_fstat64.c \
   stdio/_scprintf.c \
   stdio/_scwprintf.c \
+  stdio/_stat64.c \
   stdio/_vscprintf.c \
-  stdio/_vscwprintf.c
+  stdio/_vscwprintf.c \
+  stdio/_wstat64.c
 
 src_pre_msvcr71=\
   misc/_set_purecall_handler.c
@@ -4279,6 +4285,7 @@ EXTRA_DIST += revstamp.h \
   $(top_srcdir)/lib64/*.def.in \
   $(top_srcdir)/libarm32/*.def.in \
   $(top_srcdir)/def-include/*.def.in \
+  include/filetime_to_time64.h \
   crt/binmode.c \
   crt/crtbegin.c \
   crt/crtdll.c \
